--- a/style.css
+++ b/style.css
@@ -15,16 +15,16 @@ html, body {
 #banner{
     background-image: url("img/NodeBanners.jpg");
     width: 100vw;
-    height: 35vh;
+    height: 40vh;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-clip: border-box;
     background-size: cover;
-    background-position-y: -200px;
+    background-position-y: -35vh;
 }
 #formContainer{
     width: 50%;
-    height: 65vh;
+    height: 60vh;
     display: flex;
     flex-direction: column;
     align-items: center;
