--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html, body {
     display: flex;
     width: 100vw !important;
-    height: auto !important;
+    height: 100vh !important;
     align-items: center;
     justify-content: flex-start;
     flex-direction: column;
@@ -44,13 +44,28 @@ html, body {
     align-items: center;
     justify-content: center;
 }
+#banner-ipm-logo{
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    color: white;
+}
+#ipm-logo{
+    height: 50px;
+    width: auto;
+    position: absolute;
+    top: calc(35vh - 80px);
+    right: 15px;
+    object-fit: contain;
+    margin-top: 15px;
+}
 #banner-logo{
     height: 25vh;
 }
 #formContainer{
     width: 50%;
     margin-top: 35vh;
-    height: auto;
+    height: calc(100vh - 35vh);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -81,9 +96,13 @@ input:focus{
     border: 1px solid #4169E1;
 }
 .elementHide{
+    transition: 1s;
+    height: 35vh !important;
     visibility: hidden;
 }
 .elementShow{
+    transition: 1s;
+    height: 100vh !important;
     visibility: visible;
 }
 
@@ -93,9 +112,20 @@ input:focus{
     left: 0;
     width: 100vw;
     height: 100vh;
-    background-color: #192028;
+    background-color: #0d1014;
     z-index: 99;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+@media screen and (max-width: 480px){
+    #banner{
+        height: 25vh;
+    }
+    #formContainer{
+        margin-top: 25vh;
+    }
+    #banner-logo{
+        height: 15vh;
+    }
 }
