--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ html, body {
     flex-direction: column;
     background-color: #192028;
 }
-
 * {
     margin: 0;
     padding: 0;
@@ -49,6 +48,7 @@ html, body {
     top: 15px;
     left: 15px;
     color: white;
+    visibility: visible;
 }
 #ipm-logo{
     height: 50px;
@@ -127,5 +127,22 @@ input:focus{
     }
     #banner-logo{
         height: 15vh;
+    }
+    #banner-ipm-logo{
+        visibility: hidden;
+    }
+    #ipm-logo{
+        height: 50px;
+        width: auto;
+        position: absolute;
+        top: 0px;
+        left: 15px;
+        object-fit: contain;
+        margin-top: 15px;
+    }
+    .elementHide{
+        transition: 1s;
+        height: 25vh !important;
+        visibility: hidden;
     }
 }
