--- a/tableStyle.css
+++ b/tableStyle.css
@@ -2,6 +2,8 @@ table {
     border-collapse: separate;
     border-spacing: 0;
     color: white;
+    width: 100%;
+    height: 100%;
 }
 th,
 td {
@@ -18,7 +20,7 @@ tbody tr:nth-child(even) {
 td {
     border-bottom: 1px solid #cecfd5;
     border-right: 1px solid #cecfd5;
-    background-color: #0d1014;
+    background-color: #192028;
 }
 td:first-child {
     border-left: 1px solid #cecfd5;
